fix for dark mode input color & input pattern

--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,10 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
+input {
+  color: #009f91;
+}
+
 button  {
   border-radius: 8px;
   border: 1px solid #1a1a1a;
